Introduse RateService and SubscriberRepository + Small correction
