# routes/routes.js
@@ -9,7 +9,8 @@ const router = (app) => {
 		RatesController.getLastRateAsync(response);
 	});
 	app.post('/api/subscribe', upload.none(), (request, response) => {
-		SubscribersController.addSubscriber(request.body.email, response);
+		let email = request.body.email;
+		SubscribersController.addSubscriber(email, response);
 	});
 	app.post('/api/sendEmails', (request, response) => {
 		SubscribersController.sendEmailsAsync(response);
@@ -21,6 +22,14 @@ const router = (app) => {
 	});
 	app.get('/api/subscribers', (request, response) => {
 		SubscribersController.getAllSubscribers(response);
+	});
+	app.put('/api/changeProviderByName', (request, response) => {
+		let name = request.body.name;
+		RatesController.changeProviderByNameAsync(name, response);
+	});
+	app.put('/api/changeProviderByKey', (request, response) => {
+		let key = request.body.key;
+		RatesController.changeProviderByKeyAsync(key, response);
 	});
 };
 
